font size changed for h1 and h2 elements

--- a/styles.css
+++ b/styles.css
@@ -4,4 +4,22 @@
 
 .header {
     color: blue;
+    font-size: 44px;
+    text-align: center;
+}
+
+ul {
+    font-size: 30px;
+
+}
+
+ol {
+    font-size: 30px;
+}
+
+h2 {
+    font-size: 34px;
+}
+p {
+    font-size: 20px;
 }
